--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div id="loading">Loading...</div>
+    
     <header>
         <h1>Welcome to Hynex!</h1>
         <p>We're launching something amazing soon. Join our waitlist to be the first to know!</p>
@@ -27,8 +30,11 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Hynex. All rights reserved.</p>
+        <p>&copy; 2025 Hynex. All rights reserved. <a href="https://www.instagram.com/hynex" target="_blank">Follow us on Instagram</a></p>
     </footer>
+
+    <!-- Scroll to Top Button -->
+    <button class="scroll-to-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">↑</button>
 
     <script src="script.js"></script>
 </body>
