--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Hynex. All rights reserved. <a href="https://www.instagram.com/hynex" target="_blank">Follow us on Instagram</a></p>
+        <p>&copy; 2025 Hynex. All rights reserved. <a href="https://guns.lol/spazzx
+" target="_blank">Contact me!</a></p>
     </footer>
 
     <!-- Scroll to Top Button -->
