--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Loading Screen -->
-    <div id="loading">Loading...</div>
-    
     <header>
         <h1>Welcome to Hynex!</h1>
         <p>We're launching something amazing soon. Join our waitlist to be the first to know!</p>
@@ -30,12 +27,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Hynex. All rights reserved. <a href="https://guns.lol/spazzx
-" target="_blank">Contact me!</a></p>
+        <p>&copy; 2025 Hynex. All rights reserved.</p>
     </footer>
-
-    <!-- Scroll to Top Button -->
-    <button class="scroll-to-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">↑</button>
 
     <script src="script.js"></script>
 </body>
