--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Hynex. All rights reserved. <a href="https://www.example.com">Privacy Policy</a></p>
+        <p>&copy; 2025 Hynex. All rights reserved. <a href="https://guns.lol/spazzx" target="_blank">Contact me!</a></p>
     </footer>
 
     <script src="script.js"></script>
